restli-server/src/test/pegasus/com/linkedin/restli/server/errors/MockBadRequest.pdl
namespace com.linkedin.restli.server.errors

/**
 * Describes input validation failures in a client request.
 */
record MockBadRequest {

  /**
   * Describes input validation failures.
   */
  inputErrors: array[MockInputError] = [ ]
}